--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "base-scss",
   "version": "1.0.0",
-  "description": "The variables and modules that I use all the time",
+  "description": "Another boilerplate of stylethings",
   "main": "main.scss",
   "repository": "http://github.com/allusis/scss-base",
   "author": "Tony Montemorano",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "flexboxgrid-sass": "^8.0.5"
+  }
 }
